# LearnOpenGL

./: .gitignore  CMakeLists.txt  main.cpp
Shapes/: Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
include/common/: color.h
include/glad/: glad.h
include/simple_shape/: Shape.h  Triangle.h
lib/: glad.c
src/: main.cpp
src/common/: color.cpp
src/simple_shape/: Shape.cpp  Triangle.cpp
